web-infras/parser/tests/fixtures/esprima/es2017/async/functions/invalid-async-while/output.txt
[SyntaxError]: Missing semicolon or line terminator. (1,7)
1|async while (1) {}
 |     ^
